--- a/views/clients/clients-info.ejs
+++ b/views/clients/clients-info.ejs
@@ -40,7 +40,7 @@
         <li><a class="nav-link" data-toggle="tab" href="#hour-readings">Мерения по часове</a></li>
         <li><a class="nav-link" data-toggle="tab" href="#graph">График</a></li>
         <li><a class="nav-link" data-toggle="tab" href="#imbalance">Небаланси</a></li>
-    </ul> 
+    </ul>
 
     <div class="tab-content">
 
@@ -219,8 +219,10 @@
             </div>
         </div>
     </div>
-    <script src="../../../../js/clients/clients-info.js">
-    </script>
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../../../../js/helper-functions/date-manipulations.js"></script>
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../../../../js/clients/clients-info.js"></script>
 </body>
 
 </html>
