--- a/views/exports/inquiry-graphs.ejs
+++ b/views/exports/inquiry-graphs.ejs
@@ -171,9 +171,10 @@
         media="screen">
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../../../../js/helper-functions/date-manipulations.js"></script>
     <script src="../../../../js/exports/inquiry-graphs.js"></script>
     <script src="../../../../js/exportFunctions/exportTable.js"></script>
-    
+
 </body>
 
 </html>
