--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.css">
     <link rel="stylesheet" href="../../../../AdminLTE-master/css/layout.css">
+    <link rel="stylesheet" href="../../../../css/clients-menu.css">
     <link rel="shortcut icon" href="../../../AdminLTE-master/images/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../../../css/underline-animation.css">
 </head>
