--- a/views/exports/inquiry-readings.ejs
+++ b/views/exports/inquiry-readings.ejs
@@ -169,6 +169,7 @@
         media="screen">
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../../../../js/helper-functions/date-manipulations.js"></script>
     <script src="../../../../js/exports/inquiry-readings.js"></script>
     <script src="../../../../js/exportFunctions/exportTable.js"></script>
 </body>
