--- a/views/handle-errors/404-not-found.ejs
+++ b/views/handle-errors/404-not-found.ejs
@@ -15,6 +15,6 @@
     </p>
     <p class="mini">Не е намерено</p>
 </body>
-<script src="../../js/handle-errors/not-found.js"></script>
+<script src="../../../js/handle-errors/not-found.js"></script>
 
 </html>
