--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -176,7 +176,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a id="stp-graph-readings-href"  href="/users/list/stp-graph-readings/"
+                                    <a id="stp-graph-readings-href" href="/users/list/stp-graph-readings/"
                                         class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>СТП</p>
@@ -237,6 +237,13 @@
                                     <a id="inquiry-imbalances-href" href="/users/inquiry/imbalances" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Небаланси</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a id="inquiry-imbalances-href" href="/users/inquiry/missing-information"
+                                        class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Липсваща информация</p>
                                     </a>
                                 </li>
                             </ul>
