--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -240,7 +240,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a id="inquiry-imbalances-href" href="/users/inquiry/missing-information"
+                                    <a id="inquiry-imbalances-href" href="/users/inquiry/missing-information?data_type=data_readings&fromDate=&toDate=&name=&clientID=&readings=hour_readings_eso&profile_name="
                                         class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Липсваща информация</p>
