--- a/views/inquiry/inquiry-missing-information.ejs
+++ b/views/inquiry/inquiry-missing-information.ejs
@@ -44,26 +44,58 @@
         <div class="card-body">
             <form action="" method="GET">
                 <div class="row justify-content-around">
-                    <div class="text-heading">От дата<input id="fromDate" name="fromDate" class="ml-2" type="date"
-                            type="search"></input>
-                    </div>
-                    <div class="text-heading">До дата<input id="toDate" name="toDate" class="ml-2" type="date"
-                            type="search"></input>
-                    </div>
-                    <div><span class="text-heading">Име на клиент</span> <input id="nameOfClient"
+                    <span class="mt-4 text-heading">Вид данни:</span>
+                    <label class="radio">Почасови
+                        <input type="radio" id="data_readings" value="data_readings" required name="data_type">
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="radio">Графици
+                        <input type="radio" id="data_graphs" value="data_graphs" required name="data_type">
+                        <span class="checkmark"></span>
+                    </label>
+                    <span class="mt-4 text-heading">Вид Мерене:</span>
+                    <label class="radio mr-5">СТП
+                        <input type="radio" id="stp_hour_readings" value="stp_hour_readings" name="readings">
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="radio">Почасово
+                        <input type="radio" id="hour_readings" value="hour_readings" name="readings">
+                        <span class="checkmark"></span>
+                    </label>
+                    <label class="radio">ЕСО
+                        <input type="radio" id="hour_readings_eso" value="hour_readings_eso" name="readings">
+                        <span class="checkmark"></span>
+                    </label>
+                </div>
+                <div class="row justify-content-around my-3">
+                    <div><span class="text-heading mr-2">Име на клиент</span> <input id="nameOfClient"
                             list="stp-hour-readings-clients" name="name" autocomplete="off" class="ml-2"
                             type="search"></input>
                         <datalist id="stp-hour-readings-clients">
                         </datalist>
                     </div>
-                </div>
-                <div class="row my-3 justify-content-around">
-                    <div class="mt-3 text-heading mr-2"> Идентификационен код <input id="clientID" name="clientID"
-                            class="ml-3" autocomplete="off" list="idList" type="search"></input>
+                    <div class="text-heading"><span class="mr-3">Идентификационен код</span> <input id="clientID"
+                            name="clientID" autocomplete="off" list="idList" type="search"></input>
                         <datalist id="idList">
                         </datalist>
                     </div>
-                    <span class="mt-3 text-heading">Вид ЕРП:</span>
+                    <div class="text-heading" aria-haspopup="true" aria-expanded="true" data-toggle="tooltip"
+                        data-placement="bottom" container="body" title="Избиране на име на профил за СТП">
+                        Име на профил<input id="profile_name" class="ml-3" name="profile_name" autocomplete="off"
+                            list="profile_names" type="search"></input>
+                        <datalist id="profile_names">
+                        </datalist>
+                    </div>
+                </div>
+                <div class="row mt-3 justify-content-around">
+                    <div class="text-heading mt-3">От дата<input id="fromDate" name="fromDate" class="ml-2" type="date"
+                            type="search"></input>
+                    </div>
+                    <div class="text-heading mt-3">До дата<input id="toDate" name="toDate" class="ml-2" type="date"
+                            type="search"></input>
+                    </div>
+
+                    <span class="text-heading mt-3 erp">Вид ЕРП:</span>
                     <label class="checkbox">
                         <input type="checkbox" name="erp_type" value="evn" id="evn" checked>
                         <span>EVN</span>
@@ -78,26 +110,6 @@
                     </label>
                 </div>
                 <div class="row justify-content-around">
-                    <span class="mt-3 text-heading">Вид Мерене:</span>
-                    <label class="radio mr-5">СТП
-                        <input type="radio" id="stp_hour_readings" value="stp_hour_readings" name="readings">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="radio">Почасови
-                        <input type="radio" id="hour_readings" value="hour_readings" name="readings">
-                        <span class="checkmark"></span>
-                    </label>
-                    <label class="radio">ЕСО
-                        <input type="radio" id="hour_readings_eso" value="hour_readings_eso" name="readings">
-                        <span class="checkmark"></span>
-                    </label>
-                    <div class="mt-3 text-heading" aria-haspopup="true" aria-expanded="true" data-toggle="tooltip"
-                        data-placement="bottom" container="body" title="Избиране на име на профил за СТП">
-                        Име на профил<input id="profile_name" class="ml-3" name="profile_name" autocomplete="off"
-                            list="profile_names" type="search"></input>
-                        <datalist id="profile_names">
-                        </datalist>
-                    </div>
                 </div>
                 <div class="row justify-content-center">
                     <button type="submit" id="searchBtn" class="btn-primary btn-lg ml-3 mt-3">Търсене</button>
