--- a/views/imports/hourly.ejs
+++ b/views/imports/hourly.ejs
@@ -63,6 +63,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.15.3/xlsx.full.min.js"></script>
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
     <script src="../../../../js/imports/hourly.js"></script>
 </body>
 
