--- a/views/inquiry/inquiry-readings.ejs
+++ b/views/inquiry/inquiry-readings.ejs
@@ -167,6 +167,7 @@
     <script src="https://cdn.jsdelivr.net/npm/handsontable@7.4.2/dist/handsontable.full.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/handsontable@7.4.2/dist/handsontable.full.min.css" rel="stylesheet"
         media="screen">
+    <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
     <script src="../../../../js/helper-functions/bootstrap-tooltips.js"></script>
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/helper-functions/date-manipulations.js"></script>
