--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -207,7 +207,7 @@
                                 <li class="nav-item">
                                     <a id="invoicing-readings-href" href="/users/invoicing" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>СТП</p>
+                                        <p>Импортирани мерения</p>
                                     </a>
                                 </li>
                             </ul>
