--- a/views/inquiry/inquiry-missing-information.ejs
+++ b/views/inquiry/inquiry-missing-information.ejs
@@ -88,10 +88,10 @@
                     </div>
                 </div>
                 <div class="row mt-3 justify-content-around">
-                    <div class="text-heading mt-3">От дата<input id="fromDate" name="fromDate" class="ml-2" type="date"
+                    <div class="text-heading mt-3">От дата<input id="fromDate" name="fromDate" class="ml-2" required type="date"
                             type="search"></input>
                     </div>
-                    <div class="text-heading mt-3">До дата<input id="toDate" name="toDate" class="ml-2" type="date"
+                    <div class="text-heading mt-3">До дата<input id="toDate" name="toDate" class="ml-2" required type="date"
                             type="search"></input>
                     </div>
 
