--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -240,8 +240,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a id="inquiry-imbalances-href"
-                                        href="/users/inquiry/missing-information?data_type=data_readings&readings=hour_readings_eso&name=&clientID=&profile_name=&fromDate=&toDate=&erp_type=evn&erp_type=cez&erp_type=energoPRO"
+                                    <a id="inquiry-missing-information-href" href="/users/inquiry/missing-information"
                                         class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Липсваща информация</p>
