--- a/views/invoicing/list-readings-stp.ejs
+++ b/views/invoicing/list-readings-stp.ejs
@@ -86,9 +86,11 @@
         </thead>
         <tbody id="tBody">
         </tbody>
-
     </table>
-
+    <script src="../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../js/helper-functions/get-this-and-last-month-dates.js"></script>
+    <script src="../js/helper-functions/toastr-notifications.js"></script>
+    <script src="../js/helper-functions/remove-duplicates-from-array.js"></script>
     <script src="../js/invoicing/list-readings.js"></script>
 </body>
 
