--- a/views/readings-menu/hour-readings-daily.ejs
+++ b/views/readings-menu/hour-readings-daily.ejs
@@ -57,7 +57,9 @@
         </label>
         <canvas id="daily-hour-readings-chart" class="mb-5" width="1200" height="500"></canvas>
     </div>
-    <script src="../../../../js/hour-readings/hour-readings-daily.js">
+    <script src="../../../../js/helper-functions/process-missing-calendar-date.js"></script> 
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
+    <script src="../../../../js/readings-menu/hour-readings-daily.js">
     </script>
 </body>
 
