--- a/views/readings-menu/list-readings-stp.ejs
+++ b/views/readings-menu/list-readings-stp.ejs
@@ -58,6 +58,7 @@
         </label>
         <canvas id="daily-hour-readings-chart" class="mb-5" width="1200" height="500"></canvas>
     </div>
+    <script src="../../../../js/helper-functions/process-missing-calendar-date.js"></script> 
     <script src="../../../../js/helper-functions/toastr-notifications.js"></script>
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/readings-menu/stp-hour-readings-daily.js">
