--- a/views/graphs-menu/graphs-hour-prediction-daily.ejs
+++ b/views/graphs-menu/graphs-hour-prediction-daily.ejs
@@ -50,6 +50,8 @@
         </label>
         <canvas id="daily-hour-prediction-chart" class="mb-5" width="1200" height="500"></canvas>
     </div>
+    <script src="../../../../js/helper-functions/process-missing-calendar-date.js"></script>
+    <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/graphs/graphs-hour-prediction-daily.js">
     </script>
 </body>
