--- a/public/css/underline-animation.css
+++ b/public/css/underline-animation.css
@@ -23,6 +23,18 @@ table a::before {
     transition: all 0.5s ease-in-out 0s;
 }
 
+table a button:hover {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+table a button {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
 table a:not(.fc-more):not(.fc-end):hover:before {
     visibility: visible;
     -webkit-transform: scaleX(1);
