Bug fixes and changes
(1) - STP graphs were not truncated correctly (The truncation should have been made after the amount multiplication).
(2) - There were differences between inquiry graphs, inquiry imbalances and graphs/imbalances in the clients details menu.
(3) - The amount in table STP graphs is now converted in MW.
(4) - There were problems with chart visualization in STP monthly graphs page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -55,14 +55,12 @@
                             <a class="nav-link" data-widget="pushmenu" href="#"><i id="hmg-icon"
                                     class="fas fa-times"></i></a>
                         </li>
-                        <li class="nav-item d-none d-sm-inline-block">
-                            <a href="/dashboard" class="nav-link">Home</a>
-                        </li>
+                        
                     </ul>
             </div>
             <div class="col-md-6 mt-3">
                 <!-- SEARCH FORM -->
-                <form class="form-inline ml-3">
+              <!--   <form class="form-inline ml-3">
                     <div class="input-group input-group-sm">
                         <input class="form-control form-control-navbar" type="search" placeholder="Search"
                             aria-label="Search">
@@ -72,7 +70,7 @@
                             </button>
                         </div>
                     </div>
-                </form>
+                </form> -->
             </div>
             <div class="col-md-3 mt-3">
                 <a href="/users/logout" class="btn-lg ml-3 btn-danger">Logout</a>
