--- a/views/graphs-menu/graphs-stp-hour-prediction-daily.ejs
+++ b/views/graphs-menu/graphs-stp-hour-prediction-daily.ejs
@@ -51,6 +51,7 @@
         </label>
         <canvas id="daily-hour-prediction-chart" class="mb-5" width="1200" height="500"></canvas>
     </div>
+    <script src="../../../../js/helper-functions/date-manipulations.js"></script>
     <script src="../../../../js/helper-functions/process-missing-calendar-date.js"></script> 
     <script src="../../../../js/helper-functions/find-get-parameter.js"></script>
     <script src="../../../../js/graphs/graphs-stp-hour-prediction-daily.js">
